[project]
name = "tinyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]